[gd_scene load_steps=9 format=1]

[ext_resource path="res://scripts/squirrel.gd" type="Script" id=1]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://textures/squirrel/sprite_sheet.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 8.31909

[sub_resource type="Animation" id=2]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]

length = 0.48
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.12, 0.24, 0.36 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4 ]
}

[sub_resource type="RayShape2D" id=4]

custom_solver_bias = 0.0
length = 11.5016

[sub_resource type="RayShape2D" id=5]

custom_solver_bias = 0.0
length = 14.0889

[node name="squirrel" type="KinematicBody2D"]

z/z = 1
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 3.09724 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="HUD" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( -192, -144 )

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 3 )
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/idle = SubResource( 2 )
anims/run = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

visibility/visible = false
transform/pos = Vector2( 0, 3.09724 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Camera2D" type="Camera2D" parent="."]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = 0
limit/right = 10000000
limit/bottom = 382
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="TriggerWall" type="Area2D" parent="."]

editor/display_folded = true
visibility/visible = false
input/pickable = true
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( -4.37114e-08, -1, 1, -4.37114e-08, 0, 0 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerWall"]

transform/rot = 90.0
shape = SubResource( 4 )
trigger = true
_update_shape_index = 0

[node name="TriggerGround" type="Area2D" parent="."]

editor/display_folded = true
visibility/visible = false
input/pickable = true
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerGround"]

shape = SubResource( 5 )
trigger = true
_update_shape_index = 0

[connection signal="body_enter" from="TriggerWall" to="." method="_on_TriggerWall_body_enter"]

[connection signal="body_enter" from="TriggerGround" to="." method="_on_TriggerGround_body_enter"]

[connection signal="body_exit" from="TriggerGround" to="." method="_on_TriggerGround_body_exit"]


